@@ -78,6 +78,11 @@ class OmEnquireInternal {
 			const OmExpandDecider *edecider) const;
 	const OmDocument get_doc(om_docid did) const;
 	const OmDocument get_doc(const OmMSetItem &mitem) const;
+
+	const std::vector<OmDocument> get_docs(
+		std::vector<OmMSetItem>::const_iterator begin,
+		std::vector<OmMSetItem>::const_iterator end) const;
+
 	om_termname_list get_matching_terms(om_docid did) const;
 	om_termname_list get_matching_terms(const OmMSetItem &mitem) const;
 	std::string get_description() const;
